<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="test_oauth">Test OAuth</string>
    <string name="test_twitter_update">Test Twitter Update</string>
    <string name="game_date">Game Date</string>
    <string name="team2">Team2</string>
    <string name="team1">Team1</string>
    <string name="done">Done</string>
    <string name="cancel_settings">Cancel</string>
    <string name="save_settings">Save Settings</string>
    <string name="default_facebook">Default Facebook</string>
    <string name="default_twitter">Default Twitter</string>
    <string name="view_public_games">View Public Games</string>
    <string name="remove_completed_games">Remove Completed Games</string>
    <string name="no_games">No Games.</string>
    <string name="app_name">GameOn by Jittr</string>
    <string name="games">Games</string>
    <string name="add_game">Add Game</string>
    <string name="subscribe">Subscribe</string>
    <string name="cancel">Cancel</string>
    <string name="continue_string">Continue</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to add this Game?</string>
    <string name="discard">Discard</string>
    <string name="settings">Settings</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">FaceBook</string>
    <string name="foursquare">FourSquare</string>
    <string name="update_user_settings">Update User Settings</string>
    <string name="customize_public_game">Customize Public Game</string>
    <string name="app_description">Locale centered Gaming Application tapping into various Social Networks</string>
    <string name="selectnetwork">Select primary identity</string>
    <string name="gameon_install">GameOn Installation</string>
    <string name="title">Title</string>
</resources>

